# agent-skills

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
agent-ops/claude-plugin-converter/: SKILL.md
agent-ops/claude-plugin-converter/references/: mapping-tables.md
agent-ops/log-analyzer/: SKILL.md
agent-ops/skill-maintainer/: SKILL.md
creative/clips-studio/: README.md  SKILL.md
creative/image-studio/: README.md  SKILL.md
creative/pexels-stock-photos/: README.md  SKILL.md
mlops/model-compare/: SKILL.md  requirements-dev.txt
productivity/decision-log/: SKILL.md
productivity/document-converter/: SKILL.md
productivity/file-organizer/: SKILL.md
productivity/fill-template/: README.md  SKILL.md  requirements.txt
productivity/scheduled-summary/: SKILL.md
productivity/task-brief/: README.md  SKILL.md
productivity/travel-itinerary/: .gitignore  SKILL.md
research/deep-research/: SKILL.md
research/entity-research/: README.md  SKILL.md
research/fact-checker/: SKILL.md
research/library-rag/: .gitignore  LICENSE  README.md  SKILL.md  requirements-dev.txt  requirements.txt
research/media-analyzer/: SKILL.md
research/news-monitoring/: SKILL.md
research/notebooklm-mode/: SKILL.md
research/people-enrichment/: README.md  SKILL.md  requirements.txt
research/source-tracker/: SKILL.md
research/youtube-topic-research/: SKILL.md  requirements.txt
tests/: test_routing_fixtures.py
web-scraping/website-scraping/: .gitignore  README.md  SKILL.md
(+132 files in other folders)
